# lab3/app.py
@@ -1,5 +1,7 @@
+import datetime
 import logging
 import logging.config
+from operator import and_
 import connexion
 from connexion import NoContent
 
@@ -73,6 +75,51 @@ def add_movie_review(body):
     logger.debug(f"Stored event <Review> request with a trace id of {body['trace_id']}")
     return NoContent, 201
 
+def get_movies(start_timestamp, end_timestamp):
+    """ Returns all movies between the start and end timestamp """
+    session = DB_SESSION()
+    try:
+        start_timestamp_datetime = datetime.datetime.strptime(start_timestamp, "%Y-%m-%dT%H:%M:%S")
+        end_timestamp_datetime = datetime.datetime.strptime(end_timestamp, "%Y-%m-%dT%H:%M:%S")
+        results = session.query(MovieItem).filter(
+            and_(MovieItem.date_created >= start_timestamp_datetime,
+                    MovieItem.date_created < end_timestamp_datetime))
+        results_list = []
+        
+        for reading in results:
+            results_list.append(reading.to_dict())
+            
+        session.close()
+        
+        logger.info("Query for Movie Items after %s returns %d results" %
+                (start_timestamp, len(results_list)))
+    except Exception as e:
+        logger.error("Error in get movies: %s" % e)
+        return NoContent, 404
+    return results_list, 200
+
+def get_reviews(start_timestamp, end_timestamp):
+    """ Returns all reviews between the start and end timestamp """
+    session = DB_SESSION()
+
+    start_timestamp_datetime = datetime.datetime.strptime(start_timestamp, "%Y-%m-%dT%H:%M:%S")
+    end_timestamp_datetime = datetime.datetime.strptime(end_timestamp, "%Y-%m-%dT%H:%M:%S")
+    
+    results = session.query(Review).filter(
+        and_(Review.date_created >= start_timestamp_datetime,
+                Review.date_created < end_timestamp_datetime))
+    results_list = []
+    
+    for result in results:
+        results_list.append(result.to_dict())
+        
+    session.close()
+    
+    logger.info("Query for Reviews after %s returns %d results" %
+            (start_timestamp, len(results_list)))
+
+    
+    return results_list, 200
 
 app = connexion.FlaskApp(__name__, specification_dir='')
 app.add_api("openapi.yaml", strict_validation=True, validate_responses=True)
