# lab3/openapi.yaml
@@ -29,6 +29,46 @@ paths:
               schema:
                   $ref: '#/components/schemas/MovieItem'
         description: Movie item to add
+    get:
+      tags:
+        - user
+      summary: gets all movies
+      operationId: app.get_movies
+      description: gets all movies after a timestamp
+      parameters:
+        - name: start_timestamp
+          in: query
+          description: Limits the number of movies returned
+          schema:
+            type: string
+            format: date-time
+            example: '2016-08-29T09:12:33'
+        - name: end_timestamp
+          in: query
+          description: Limits the number of movies returned
+          schema:
+            type: string
+            format: date-time
+            example: '2016-08-29T09:12:33'
+      responses:
+        '200':
+          description: Successfully returned a list of movies
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/MovieItem'
+        '400':
+          description: Invalid request
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: 'Invalid request'
   /movies/review:
     post:
       tags:
@@ -47,6 +87,46 @@ paths:
               schema:
                   $ref: '#/components/schemas/Review'
         description: Movie review to add
+    get:
+      tags:
+        - user
+      summary: gets all reviews
+      operationId: app.get_reviews
+      description: gets all reviews after a timestamp
+      parameters:
+        - name: start_timestamp
+          in: query
+          description: Limits the number of reviews returned
+          schema:
+            type: string
+            format: date-time
+            example: '2016-08-29T09:12:33.001Z'
+        - name: end_timestamp
+          in: query
+          description: Limits the number of reviews returned
+          schema:
+            type: string
+            format: date-time
+            example: '2016-08-29T09:12:33.001Z'
+      responses:
+        '200':
+          description: Successfully returned a list of reviews
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Review'
+        '400':
+          description: Invalid request
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: 'Invalid request'
 components:
   schemas:
     MovieItem:
